kubernetes/deployment/cassandra.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-vn
  namespace: ndl
  labels:
    app: cassandra-vn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-vn
  template:
    metadata:
      labels:
        app: cassandra-vn
    spec:
      securityContext:
        runAsUser: 1001  # Cassandra runs as this user in Bitnami images
        fsGroup: 1001    # Ensures the group has access to the volume
      containers:
        - name: cassandra
          image: nexus.fnc.reg/cassandra:3.11.6-debian-10-r100
          ports:
            - containerPort: 9042
          volumeMounts:
            - name: cassandra-data
              mountPath: /bitnami/cassandra
      volumes:
        - name: cassandra-data
          persistentVolumeClaim:
            claimName: cassandra-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-service
  namespace: ndl
  labels:
    app: cassandra-vn
spec:
  type: NodePort
  ports:
    - port: 9042
      targetPort: 9042
  selector:
    app: cassandra-vn
