kubernetes/deployment/elk.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vn

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: vn
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: nexus.fnc.reg/baodh/elasticsearch:8.5.1
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: es-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              cpu: 500m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 4Gi
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
        - name: es-config
          configMap:
            name: es-config
        - name: es-data
          persistentVolumeClaim:
            claimName: es-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: vn
  labels:
    component: elasticsearch
spec:
  type: NodePort  # Change to ClusterIP or LoadBalancer if needed
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
  selector:
    component: elasticsearch

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: vn
spec:
  rules:
    - host: vn-elasticsearch.167.254.190.2.nip.io  # Change to your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
